--- a/assets/css/mainPage.scss
+++ b/assets/css/mainPage.scss
@@ -38,8 +38,10 @@ $happyGrey: #f5f5f5;
   }
 }
 
-.row.row-dashboard:hover {
-  background-color: $happyGrey;
+.row.row-dashboard {
+  &:hover {
+    background-color: $happyGrey;
+  }
 }
 
 .badge-blue {
