--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -11,8 +11,10 @@
     <div class="d-flex justify-content-center pt-2">
       <div class="row">
           {# diplay the profile info #}
-          {% include 'partials/_profileInfo.html.twig' %}   
-          <div class="col col-lg-6 col-md-6">
+          <div class="col-12 col-lg-3 col-md-6">
+            {% include 'partials/_profileInfo.html.twig' %}
+          </div>
+          <div class="col-12 col-lg-6 col-md-6">
               <div class="card mt-3">
                   <div class="card-header">
                     Quote
@@ -25,7 +27,7 @@
                   </div>
               </div>
           </div>
-          <div class="col col-lg-3 col-md-3">
+          <div class="col-12 col-lg-3 col-md-6">
               <div class="card mt-3">
                   <div class="card-header">
                     Quote
