--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -27,7 +27,7 @@
                 <div class="input-group mr-sm-2">
                     <input type="search" class="form-control" id="formSearch" name="formSearch" placeholder="Name, Pseudonym...">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary btn-search" type="submit" id="btnFormSearch"><i class="fas fa-search"></i></button>
+                        <button class="btn btn-outline-secondary btn-search shadow-none" type="submit" id="btnFormSearch"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
             </form>
