--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -80,7 +80,7 @@
                 {{ form_widget(form.listInterest) }}
             </div>
             <div class="d-flex justify-content-center pt-2 mt-2">
-                <button type="submit" class="btn btn-profile-update btn-sm mr-2 shadow-none"><i class="far fa-edit"></i>  {{ 'profile.btn_update'|trans|raw }}</button>
+                <button type="submit" class="btn btn-profile-dark-blue btn-sm mr-2 shadow-none"><i class="far fa-edit"></i>  {{ 'profile.btn_update'|trans|raw }}</button>
                 <button type="button" id="btn-profile-delete" class="btn btn-profile-delete btn-sm shadow-none" data-toggle="modal" data-target="#deleteProfileModal">
                     <i class="far fa-trash-alt"></i>  {{ 'profile.btn_delete'|trans|raw }}
                 </button>
