--- a/templates/profile/showProfile.html.twig
+++ b/templates/profile/showProfile.html.twig
@@ -41,8 +41,13 @@
             </div>
             
         </div>
-
-        <div class="d-flex justify-content-center pt-2">
+        <div class="my-3 pt-2 pb-1 bg-white rounded shadow-sm">
+            <div class="text-center mb-4 mt-4">
+                <a class="btn btn-profile-dark-blue btn-sm mr-3 shadow-none" href="#" role="button"><i class="fas fa-user-plus"></i> Se connecter</a>
+                <a class="btn btn-profile-grey btn-sm shadow-none" href="#" role="button"><i class="fas fa-envelope"></i> Envoyer un message</a>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
             <div class="card mt-2 card-profile">
                 <div class="card-header text-left"><i class="fas fa-user-edit"></i>  Description</div>
                 <div class="card-body text-left">
