--- a/templates/partials/_profileInfo.html.twig
+++ b/templates/partials/_profileInfo.html.twig
@@ -112,8 +112,8 @@
         <span class="col-text-profile"><i class="fas fa-eye"></i> Nouvelles visites</span>
       </div>
       <div class="col-3">
-        {% set nb_visitor = user.visits|length %}
-        {% if nb_visitor|length > 0 %}<a href="{{ path('show_visit') }}">{% endif %}
+        {% set nb_visitor = new_visit[0][1] %}
+        {% if nb_visitor > 0 %}<a href="{{ path('show_visit') }}">{% endif %}
         <span class="col-text-profile float-right badge badge-blue">
           {{ '%02d'|format(nb_visitor) }}
         </span>
