work on mecanim of showProfile with Visit Entity

--- a/assets/css/profile.scss
+++ b/assets/css/profile.scss
@@ -56,8 +56,8 @@ $happyRed: #B81A18;
     background-color: $happyDarkBlue;
     color: #ffffff;
   }
-  &.btn-profile-grey {
-    background-color: $happyGrey;
+  &.btn-profile-white {
+    background-color: white;
     color: #000000;
   }
   &.btn-confirm-profile-delete {
